# nft-tokenization-program

./: Cargo.toml  components.json  config-overrides.js  mytokenizednfts.tsx  package-lock.json  package.json
dummynft/: dummynft
platform/: package-lock.json  package.json  tailwind.config.ts
platform/app/: globals.css  layout.tsx  page.tsx
platform/app/dashboard/: data.ts  page.tsx
platform/app/marketplace/: page.tsx
platform/components/Accordion/: index.tsx
platform/components/AvatarSet/: index.tsx
platform/components/Breadcrumbs/: index.tsx
platform/components/Button/: index.tsx
platform/components/Card/: index.tsx
platform/components/ChipImageIcon/: index.tsx
platform/components/ChipList/: index.tsx
platform/components/CustomDropdown/: MultiSelectDropdown.tsx  RadioDropdown.tsx  index.tsx
platform/helpers/: getAccounts.ts  key.ts  model.ts
platform/hooks/: useBreakpointMatch.ts  useSectionObserver.ts  useSidebarSelector.ts
platform/routes/: index.ts
platform/store/: index.ts
platform/theme/: index.ts
platform/types/: ParamType.ts
program/: check.rs  fundraise.rs  market.rs  processor.rs  service.rs  tokenizenft.rs
src/: App.tsx  benefits.rs  dex.rs  fundraise.rs  fundraisings.tsx  getAccounts.ts  index.css  instruction.rs  key.ts  lib.rs  market.rs  model.ts  my_nfts.tsx  myfundraisings.tsx  mynftsonsale.tsx  mytokenizednfts.tsx  processor.rs  service.rs  service.ts  state.rs  tokenizedonsale.tsx  tokenizenft.rs  utils.ts  vote.rs  wholeonsale.tsx
src/layouts/: dashboard.tsx
src/routes/: route.tsx
(+78 files in other folders)
