[package]
name = "nft-tokenization-program"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.9.6"
thiserror = "1.0.24"
spl-token-2022 = {version="1.0.0",features=["no-entrypoint"]}
spl-token = {version="3.1.1",features=["no-entrypoint"]}
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.1"
ahash = "=0.8.4"
mpl-token-metadata  = "4.0.0" 

[features]
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]
