[package]
name = "nft_tokenization_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.9"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.24"
spl-token-2022 = {version="1.0.0",features=["no-entrypoint"]}
spl-token = {version="3.1.1",features=["no-entrypoint"]}
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.1"
ahash = "=0.8.4"
mpl-token-metadata  = "4.0.0" 

[lib]
name = "nft_tokenization_program"
crate-type = ["cdylib", "lib"]
